syntax = "proto3";

package com.road.yishi.proto.simple;

message InfoReqMsg {
  int32 otherId = 1;
  int32 from = 2;
}
